# halo-mqtt-qt

./: .gitmodules  CMakeLists.txt  README.md
src/: Args.h  CMakeLists.txt  Crypto.cpp  Crypto.h  HaloBluetooth.cpp  HaloBluetooth.h  HaloManager.cpp  HaloManager.h  HaloMqtt.cpp  HaloMqtt.h  Info.plist  Locations.cpp  Locations.h  Options.h  main.cpp
